katakoda-ingress-orig/ingress.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-ingress-1b
  labels:
    app: nginx-ingress
spec:
  type: NodePort
  ports:
#  - nodePort: 32577
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
  selector:
    app: nginx-ingress
